# chatbot_gsantana

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  entrypoint.sh  gerar_diagrama.py  jest.config.js  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  wiki-sync.yml
backend/: app.py  config_database.py  database.py  models.py  routes.py
backend/database/: gsantana.db
backend/repositories/: faq_repository.py
backend/services/: faq_service.py
docs/: 01-especificacao.md  02-modelo-c4.md  03-arquitetura.md  04-seguranca.md  05-design.md  06-admin-interface.md  06-deploy.md  07-deploy.md  07-guias-de-uso.md  08-guias-de-uso.md  Arquitetura-do-Sistema.md  Design-UX-UI.md  Especificacao-do-Projeto.md  Guia-de-Deploy.md  Guias-de-Uso.md  Home.md  Interface-Administrativa.md  Modelo-C4.md  Seguranca.md  _Sidebar.md
html/: index.html  script.js  style.css
html/admin/: faqs.html  login.html
html/admin/js/: faqs.js  login.js
scripts/: create_superuser.py
src/chatbot_gsantana/: initial_data.py  main.py
src/chatbot_gsantana/api/: deps.py  middleware.py
src/chatbot_gsantana/api/v1/: api.py
src/chatbot_gsantana/api/v1/endpoints/: chat.py  faq.py  login.py  users.py
src/chatbot_gsantana/core/: config.py  database.py  logging_config.py  security.py
src/chatbot_gsantana/fsm/: perfil.py
src/chatbot_gsantana/models/: __init__.py  conversation_state.py  faq.py  user.py  voluntario.py
src/chatbot_gsantana/repositories/: conversation_state.py  faq.py  user.py  voluntario.py
src/chatbot_gsantana/schemas/: __init__.py  chat.py  faq.py  token.py  user.py
src/chatbot_gsantana/services/: faq.py  user.py  voluntario.py
tests/: conftest.py
tests/api/: test_app_init.py  test_faq.py  test_middleware.py
tests/api/v1/: test_faq.py  test_faqs_security.py  test_faqs_validation.py  test_users.py
tests/cli/: test_manage.py
tests/core/: test_security.py
tests/e2e/: conftest.py  test_chat_onboarding_flow.py
tests/frontend/: admin_faqs.test.js  admin_login.test.js  chat.test.js  setup.js
tests/fsm/: test_perfil_chat_fsm.py
tests/repositories/: test_conversation_state_repository.py
tests/services/: test_user_service.py  test_voluntario_service.py
