[project]
name = "chatbot-gsantana"
version = "0.1.0"
description = "Chat bot para interação de usuários com um site."
authors = [
    {name = "Gsantana",email = "gilmar.jesus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.111.0,<0.112.0)",
    "uvicorn[standard] (>=0.30.1,<0.31.0)",
    "pydantic-settings (>=2.4.0,<3.0.0)",
    "python-multipart (>=0.0.9,<0.0.10)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.3.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
